@startuml
' Diagramme ER (IE) des entités de persistance BrokerX basé sur Flyway
entity "Users" as user {
  id : BIGSERIAL [PK] NOT NULL
  --
  email : VARCHAR(255) NOT NULL
  password_hash : VARCHAR(255) NOT NULL
  name : VARCHAR(255)
  adresse : VARCHAR(255)
  date_de_naissance : DATE
  status : VARCHAR(20) NOT NULL
  balance : DECIMAL(15,2)
}

entity "user_audit" as audit {
  id : BIGSERIAL [PK] NOT NULL
  user_id : BIGINT [FK] NOT NULL
  --
  action : VARCHAR(50) NOT NULL
  timestamp : TIMESTAMP NOT NULL
  document_hash : VARCHAR(255)
  ip_address : VARCHAR(45)
  user_agent : VARCHAR(255)
  session_token : VARCHAR(255)
}

entity "transactions" as transaction {
  id : BIGSERIAL [PK] NOT NULL
  user_id : BIGINT [FK] NOT NULL
  --
  idempotency_key : VARCHAR(255) NOT NULL
  amount : DECIMAL(15,2) NOT NULL
  type : VARCHAR(50) NOT NULL
  status : VARCHAR(50) NOT NULL
  description : TEXT
  created_at : TIMESTAMP NOT NULL
  updated_at : TIMESTAMP NOT NULL
}

entity "orders" as ord {
  id : BIGSERIAL [PK] NOT NULL
  user_id : BIGINT [FK] NOT NULL
  --
  client_order_id : VARCHAR(64)
  symbol : VARCHAR(16) NOT NULL
  side : VARCHAR(16) NOT NULL
  type : VARCHAR(16) NOT NULL
  quantity : INT NOT NULL
  price : DOUBLE PRECISION
  duration : VARCHAR(16) NOT NULL
  timestamp : TIMESTAMP(3) NOT NULL
  status : VARCHAR(16) NOT NULL
  reject_reason : VARCHAR(255)
}

entity "mfa_challenges" as mfa {
  id : BIGSERIAL [PK] NOT NULL
  user_id : BIGINT [FK] NOT NULL
  --
  code : VARCHAR(6) NOT NULL
  created_at : TIMESTAMP NOT NULL
  expires_at : TIMESTAMP NOT NULL
  used : BOOLEAN NOT NULL
  ip_address : VARCHAR(45)
  failed_attempts : INT
  locked_until : TIMESTAMP
}

entity "verification_token" as vtoken {
  id : SERIAL [PK] NOT NULL
  user_id : BIGINT [FK] NOT NULL
  --
  token_hash : VARCHAR(255) NOT NULL
  expiry_date : TIMESTAMP NOT NULL
}

user ||--o{ transaction : "effectue"
user ||--o{ ord : "place"
user ||--o{ audit : "est journalisé"
user ||--o{ mfa : "accomplit"
user ||--o{ vtoken : "obtient"
@enduml
